# pre-commit-hooks

./: .gitignore  .gitlab-ci.yml  .pre-commit-hooks.yaml  README.md  notes  setup.cfg
.github/workflows/: github-actions.yml  main.yml
pre_commit_hooks/: check_locks.py  copyright_updater.py  dcfiles-updated.py  dcfiles_updated.py  generated-header-separated.py  type_annotations_updater.py
pre_commit_hooks/soft-lock/: check-mr.py  install.py  lock_globals.py
pre_commit_hooks/soft-lock/client/: git-unlock  run_python
pre_commit_hooks/soft_lock/: cmd-locks.py  cmd-unlock.py
pre_commit_hooks/soft_lock/client/: cli_utils.py  git-history
soft_lock/: check-mr.py  cmd-lock.py  cmd-locks.py  cmd-unlock.py  install.py  lock_globals.py  pre_commit.py  uninstall.py
soft_lock/client/: git-lock  git-locks
