[metadata]
name = pre_commit_hooks
version = 0.0.1
description = Pre-commit hooks for Zuru projects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/zuru.tech/operations/pre-commit-hooks
author = Loris D Auria
author_email = loris.dauria@zuru.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = 
    pre_commit_hooks
    soft_lock

package_dir =
    pre_commit_hooks = pre_commit_hooks
    soft_lock = soft_lock

install_requires =
    ruamel.yaml>=0.15
    tomli>=1.1.0;python_version<"3.11"
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    copyright_updater = pre_commit_hooks.copyright_updater:main
    generated_header_separated = pre_commit_hooks.generated_header_separated:main
    check_locks = soft_lock.pre_commit:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false